force-app/main/default/objects/Big_Document__c/Big_Document__c.object-meta.xml
<CustomObject>
    <label>Big Document</label>
    <nameField>
        <displayFormat>BD-{0000000}</displayFormat>
        <label>Big Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Big Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>