force-app/main/default/objects/Big_Document__c/fields/Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Id_Text__c</fullName>
    <label>Id Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>